--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
         applicationId "com.yjx.cnblog"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
@@ -24,9 +24,6 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.0'
-    compile 'com.android.support:recyclerview-v7:22.1.0'
-    compile 'com.android.support:cardview-v7:22.1.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'eu.the4thfloor.volley:com.android.volley:2015.01.06'
     compile 'com.jakewharton:butterknife:6.1.0'
@@ -40,5 +37,7 @@ dependencies {
     compile files('libs/fastjson-1.1.33.jar')
     compile 'com.github.d-max:spots-dialog:0.2@aar'
     compile 'com.github.chrisbanes.photoview:library:1.2.2'
-
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:22.1.1'
 }
